@startuml

class EmployeeService {
    +getEmployeeById(int): Employee
    +sendFormToEmployeeWithId(int): void
}
class EmployeeRepository {
    +findEmployeeById(): Optional<Employee>
}
class FormLetterService {
    +generateWelcomeLetter(Employee)
}
class FileManager {
    +getTextFromFile(String): String
    +writeTextToFile(String, String)
}
class Datasource {
    +companies: List<Company>
    +employees: List<Employee>
}
EmployeeService --> EmployeeRepository
EmployeeService --> FormLetterService
EmployeeRepository --> Datasource
FormLetterService --> FileManager

@enduml
